--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,16 @@ button {
   display: inline-block;
 }
 
+input {
+  width: 100%;
+  height: 3rem;
+  padding-inline: .75rem;
+}
+
+input:focus {
+  outline: none;
+}
+
 button {
   cursor: pointer;
   line-height: 1;
@@ -51,18 +61,26 @@ img {
   --primary-hue: 205;
   --primary-saturation: 89%;
   --primary: 205, 89%, 53%;
+  --dark: 0, 0%, 20%;
 
   --z-10: 10;
+  --z-100: 100;
+
+  --header-height: 72px;
 
   --shadow-md: 0 0 24px 4px hsla(var(--primary-hue), var(--primary-saturation), 10%, .05);
 }
+
+html {
+  scrollbar-width: thin;
+}
+
 
 body {
   font-family: 'Rubik', sans-serif;
   background-color: hsl(var(--primary-hue), var(--primary-saturation), 98%);
   font-weight: 300;
 }
-
 
 .container {
   width: min(100%, 1400px);
