--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -6,7 +6,7 @@
   top: 0;
   width: 100%;
   transition: top .3s ease;
-
+  z-index: var(--z-10);
   perspective: 1000px;
   perspective-origin: 50%;
 
