--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,6 +4,25 @@
   display: flex;
   gap: 1.5rem;
   align-items: center;
+
+  /* MOVILE */
+  position: fixed;
+  width: min(100%, 300px);
+  height: 100vh;
+  top: var(--header-height);
+  left: 0;
+  background-color: #fafafa;
+  color: hsl(var(--dark));
+  flex-direction: column;
+  align-items: start;
+  padding: 1.5rem;
+  box-shadow: var(--shadow-md);
+  transform: translateX(-100%);
+  
+  &.is-open {
+    transition: transform .3s;
+    transform: translate(0);
+  }
 }
 
 .NavbarMenu {
@@ -14,6 +33,7 @@
   display: flex;
   flex-direction: column;
   gap: .25rem;
+  width: 100%;
 }
 
 .NavbarMenu-item {
@@ -26,4 +46,25 @@
   &:hover {
     background-color: hsl(var(--primary-hue), var(--primary-saturation), 98%);
   }
+}
+
+@media screen and (width > 760px) {
+  .Navbar {
+    position: unset;
+    width: auto;
+    height: auto;
+    top: unset;
+    left: 0;
+    background-color: transparent;
+    color: inherit;
+    flex-direction: row;
+    align-items: center;
+    padding: unset;
+    box-shadow: none;
+    transform: translate(0);
+  }
+}
+
+body:has(.Navbar.is-open) {
+  overflow: hidden;
 }
