--- a/src/index.css
+++ b/src/index.css
@@ -81,6 +81,7 @@ body {
   font-family: 'Rubik', sans-serif;
   background-color: hsl(var(--primary-hue), var(--primary-saturation), 98%);
   font-weight: 300;
+  padding-top: var(--header-height);
 }
 
 .container {
