--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -7,7 +7,13 @@
   align-items: start;
   justify-content: center;
   border-radius: 0 0 1rem 1rem;
-  color: hsl(var(--dark));
+  color: hsl(var(--light));
+  /* Image styles */
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-color: hsla(var(--dark), .8);
+  background-blend-mode: multiply;
 
   .Hero-title {
     display: flex;
@@ -25,7 +31,7 @@
 
   .Hero-SearchBar {
     width: 100%;
-
+    
     .FormSearch {
       width: 100%;
       border-radius: 100vh;
@@ -34,7 +40,7 @@
 
 }
 
-section + section {
+section+section {
   margin-top: 4rem;
 }
 
