--- a/src/index.css
+++ b/src/index.css
@@ -62,6 +62,8 @@ img {
   --primary-saturation: 89%;
   --primary: 205, 89%, 53%;
   --dark: 0, 0%, 20%;
+  --light: 0, 0%, 98%;
+  --white: 0 , 0%, 100%;
 
   --z-10: 10;
   --z-100: 100;
@@ -82,10 +84,11 @@ body {
   background-color: hsl(var(--primary-hue), var(--primary-saturation), 98%);
   font-weight: 300;
   padding-top: var(--header-height);
+  color: hsl(var(--dark));
 }
 
 .container {
-  width: min(100%, 1400px);
+  width: min(100%, 1280px);
   margin-inline: auto;
   padding-inline: 1.5rem;
 }
