--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -34,6 +34,7 @@
   transition: transform .5s, opacity .3s .5s;
   transform-style: preserve-3d;
   transform: rotateX(-90deg);
+  background-color: hsl(var(--white));
 
   &.is-visible {
     transition: transform .5s, opacity .3s 0s;
