--- a/src/index.css
+++ b/src/index.css
@@ -76,10 +76,12 @@ img {
 
 html {
   scrollbar-width: thin;
+  scroll-behavior: smooth;
 }
 
 
 body {
+  scroll-behavior: smooth;
   font-family: 'Rubik', sans-serif;
   background-color: hsl(var(--primary-hue), var(--primary-saturation), 98%);
   font-weight: 300;
