--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,8 @@ img {
   --primary: 205, 89%, 53%;
   --dark: 0, 0%, 20%;
   --light: 0, 0%, 98%;
-  --white: 0 , 0%, 100%;
+  --white: 0, 0%, 100%;
+  --tmdbDarkBlue: 207, 91%, 13%;
 
   --z-10: 10;
   --z-100: 100;
