--- a/src/components/Tabs/Tabs.css
+++ b/src/components/Tabs/Tabs.css
@@ -20,7 +20,7 @@
 
 .TabList {
   display: flex;
-  outline: 1px solid;
+  outline: 1.5px solid;
   padding: .25rem;
   width: 100%;
   max-width: max-content;
@@ -75,4 +75,6 @@
 .TabContent {
   padding-top: 1rem;
   font-weight: 400;
+  height: 340px;
 }
+
