--- a/src/components/skeleton/Skeleton.css
+++ b/src/components/skeleton/Skeleton.css
@@ -1,11 +1,13 @@
-.Skeleton.Movie-style1 {
+.Skeleton.Movie-style1,
+.Skeleton.CardMedium {
   display: flex;
   gap: 1rem;
   overflow: auto;
   scrollbar-width: none;
 }
 
-.Skeleton.Movie-style1 .card {
+.Skeleton.Movie-style1 .card,
+.Skeleton.CardMedium .card {
   width: 160px;
   height: 340px;
   background-color: hsl(var(--dark), .1);
@@ -15,24 +17,31 @@
   position: relative;
   animation: pulse 1.5s ease-in-out infinite;
   animation-delay: var(--animation-delay);
-  /* Aplicar el custom property del delay */
 }
 
-.Skeleton.Movie-style1 .poster-placeholder,
-.Skeleton.Movie-style1 .title-placeholder,
-.Skeleton.Movie-style1 .year-placeholder,
-.Skeleton.Movie-style1 .circle-placeholder {
+.Skeleton.CardMedium .card {
+  width: 280px;
+  height: 300px;
+}
+
+.Skeleton .poster-placeholder,
+.Skeleton .title-placeholder,
+.Skeleton .year-placeholder,
+.Skeleton .circle-placeholder {
   background-color: hsl(var(--dark), .1);
   animation: pulse 1.5s ease-in-out infinite;
   animation-delay: var(--animation-delay);
-  /* Aplicar delay a los placeholders */
 }
 
 .Skeleton.Movie-style1 .poster-placeholder {
   height: 225px;
 }
 
-.Skeleton.Movie-style1 .title-placeholder {
+.Skeleton.CardMedium .poster-placeholder {
+  height: 180px;
+}
+
+.Skeleton .title-placeholder {
   margin: .5rem;
   margin-top: 2rem;
   width: 120px;
@@ -40,7 +49,7 @@
   border-radius: 8px;
 }
 
-.Skeleton.Movie-style1 .year-placeholder {
+.Skeleton .year-placeholder {
   margin: .5rem;
   margin-top: 3rem;
   width: 80px;
@@ -48,7 +57,8 @@
   border-radius: 6px;
 }
 
-.Skeleton.Movie-style1 .circle-placeholder {
+.Skeleton.Movie-style1 .circle-placeholder,
+.Skeleton.CardMedium .circle-placeholder {
   width: 38px;
   height: 38px;
   border-radius: 50%;
@@ -56,6 +66,10 @@
   position: absolute;
   top: calc(225px - 19px);
   margin-left: .5rem;
+}
+
+.Skeleton.CardMedium .circle-placeholder {
+  top: calc(180px - 19px);
 }
 
 /* Animación de pulso */
@@ -76,3 +90,8 @@
 .Skeleton::-webkit-scrollbar {
   display: none;
 }
+
+
+
+
+/* ---------- */
