--- a/src/Pages/MovieDetails.css
+++ b/src/Pages/MovieDetails.css
@@ -134,11 +134,11 @@
       position: relative;
       display: flex;
       flex-direction: row-reverse;
-      justify-content: center;
+      justify-content: start;
       gap: 2.5rem;
 
       .Description>p {
-        max-width: 600px;
+        max-width: 800px;
       }
 
       .DescriptionPoster {
