--- a/src/App.css
+++ b/src/App.css
@@ -7,3 +7,13 @@
   opacity: 0;
   pointer-events: none;
 }
+
+.main-wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: calc(100vh - var(--header-height));
+
+  > main {
+    flex: 1;
+  }
+}
