--- a/src/components/Movies.css
+++ b/src/components/Movies.css
@@ -1,4 +1,4 @@
-.MoviesScroller {
+.MoviesScroller, .Grid {
   display: flex;
   gap: 1rem;
   padding-block: .5rem;
@@ -17,6 +17,7 @@
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    height: 100%;
 
     .MoviesScroller-MovieImg {
       height: 225px;
