--- a/src/components/FormSearch.css
+++ b/src/components/FormSearch.css
@@ -4,8 +4,12 @@
   color: hsla(var(--dark), .9);
   display: flex;
   align-items: center;
-  overflow: hidden;
   font-size: .875rem;
+  position: relative;
+
+  &.has-error {
+    outline: 2px solid #f05;
+  }
 
   .Icon {
     flex-shrink: 0;
@@ -27,12 +31,27 @@
     padding: .5rem 1rem;
     color: hsl(var(--light));
     font-weight: 500;
+    border-radius: 0 2rem 2rem 0;
   }
 
   &:has(button) {
     padding-right: 0;
   }
 
+}
+
+.FormSearh-Error {
+  min-height: 2rem;
+  font-size: 1rem;
+  color: hsl(var(--light));
+  background-color: #f05;
+  position: absolute;
+  top: 100%;
+  inset-inline: 15%;
+  align-content: center;
+  padding: .5rem;
+  border-radius: 0 0 .5rem .5rem;
+  text-align: center;
 }
 
 @media screen and (width > 540px) {
